[package]
name = "kurp"
version = "0.1.0"
edition = "2021"

[dependencies]
waifu2x-ncnn-vulkan-rs = { path = "waifu2x-ncnn-vulkan-rs" }
realcugan-ncnn-vulkan-rs = { path = "realcugan-ncnn-vulkan-rs" }
warp = { version = "0.3.0", features = ["compression"] }
warp-reverse-proxy = "0.5.0"
bytes = "1.0"
futures = { version = "0.3.*" }
tokio = { version = "1.0", features = ["full"] }

log = "0.4"
env_logger = "0.10.0"

image = { version = "0.24.5", features = ["jpeg", "png", "webp", "webp-encoder", "gif"] }
unicase = "2.6"

config = { version = "0.13.1", features = ["yaml"] }
yaml-rust = "0.4"
serde = "1.0.147"
serde_derive = "1.0.147"
once_cell = "1.10"
async-compression = { version = "0.3.15", features = ["tokio", "brotli", "gzip", "deflate"] }
