[package]
name = "kurp"
version = "0.1.0"
edition = "2021"

[dependencies]
waifu2x-ncnn-vulkan-rs = { path = "waifu2x-ncnn-vulkan-rs" }
realcugan-ncnn-vulkan-rs = { path = "realcugan-ncnn-vulkan-rs" }

hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6.12", features = ["ws", "headers"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.4.13"
futures = { version = "0.3.*" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18"

log = "0.4"
env_logger = "0.10.0"

yaml-rust = "0.4"
serde = "1.0.158"
serde_derive = "1.0.158"
serde_yaml = "0.9"

async-compression = { version = "0.3.15", features = ["tokio", "brotli", "gzip", "deflate"] }
async-trait = "0.1.68"
config = { version = "0.13.3", features = ["yaml"] }
bytes = "1.4.0"
image = { version = "0.24.5", features = ["jpeg", "png", "webp", "webp-encoder", "gif"] }
once_cell = "1.10"
moka = { version = "0.10", features = ["future"] }
ractor = "0.7.5"
regex = "1"
unicase = "2.6"